# dga-detection-analysis-framework

./: .gitignore  README.md  TODO.md  conf.json  predict_file.py  requirements.txt  run.py  run.test.sh  stratosphere_windowing.py  top10m.py
dgarchive/: bdn.ipynb  bdn.py  main.py
dns_parse/: Makefile  dns_parse.c  dns_parse.h  network.c  rtypes.c
dns_parser/: Makefile
domain-manipulator/: main.py
lstm_dga/: README.md  predict.py  predict_dns_parse_output.py  requirements.txt  test_model_loading.py
mac_address/: CONCLUSION.md
ml/: common.py  cspell.json  dataset2.ipynb  fpr_normal_approach copy.ipynb  ml.ipynb  ml2.ipynb  windows_time.ipynb
nns/: README.md
old_trash/: TABLE_METRICS.md  predict_X.py  predict_file.py  stratosphere_false_positives.py
pslregex/: _regex.json  dicter.json  dicter2c.py  iana.csv  requirements.txt  tldlist.csv
pslregex/pslregex/c/: CMakeLists.txt  README.md  build.sh  build_trie  build_trie.c  build_trie.h  common.h  csv.c  csv_frame_psl.c  csv_frame_psl.h  domain_manipulation.c  domain_manipulation.h  main  main.c  main.h  parse_suffixes.c  parse_suffixes.h  parser.c  parser.h  trie.h  utils.c  utils.h
pslregex/pslregex/c/analyzer/: flashstart.c  flashstart.h  stratosphere.c  training.c  training.h
pslregex/pslregex/c/generator/: 1707.c  1707.h  training.c  training.h
pslregex/pslregex/c/suffixes/: parser.c  parser.h  trie.c  trie.h
pslregex/pslregex/c/windowing/: windowing.c  windowing.h
psltrie/: Makefile  project.conf
scripts/: analysis.py  clean.py  dbfill.py  fix_lowercase_dn.py  fix_utf8.py  it2016.py  tmp.py  (+4 more)
(+510 files in other folders)
